# polysemy-io

./: .gitignore  README.md  polysemy-io.cabal  stack.yaml
.github/workflows/: auto-tag.yaml  test.yaml
lib/Polysemy/IO/: File.hs  Network.hs  Open.hs
lib/Polysemy/IO/File/: Handle.hs
lib/Polysemy/IO/Network/: Socket.hs
lib/Polysemy/System/: Args.hs  Environment.hs  Exit.hs  File.hs  Handle.hs  Memory.hs  Timeout.hs
test/: Main.hs
test/Suite/: Timeout.hs
