cabal-version: 2.2
name:          polysemy-io
version:       0.5

common common-options
  default-language:   Haskell2010
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
    , OverloadedLabels
    , OverloadedLists
    , DerivingStrategies
    , GeneralizedNewtypeDeriving
    , DeriveAnyClass
    , DeriveGeneric
    , DeriveFunctor
    , DeriveDataTypeable
    , DataKinds
    , ConstraintKinds
    , PolyKinds
    , RankNTypes
    , GADTs
    , KindSignatures
    , FlexibleInstances
    , FlexibleContexts
    , NoMonomorphismRestriction
    , AllowAmbiguousTypes
    , TypeApplications
    , TypeOperators
    , TypeFamilies
    , MultiParamTypeClasses
    , FunctionalDependencies
    , NumericUnderscores
    , BangPatterns
    , PatternSynonyms
    , ViewPatterns
    , LambdaCase
    , TupleSections
    , BlockArguments
    , RecordWildCards
    , ScopedTypeVariables
    , DuplicateRecordFields
    , TemplateHaskell
  ghc-options:        -Wall
                      -Wno-type-defaults
                      -fplugin=Polysemy.Plugin
                      -fwrite-ide-info
                      -hiedir=.hie
  build-depends:
      base
    , polysemy
    , polysemy-plugin
    , profunctors
    , either
    , network
    , bytestring
    -- , singletons
    -- , singletons-th
    -- , singletons-base

library
  import:           common-options
  exposed-modules:
      Polysemy.System.Environment
    , Polysemy.System.Args
    , Polysemy.System.Exit
    , Polysemy.System.Timeout
    , Polysemy.System.Memory
    , Polysemy.IO.File
    , Polysemy.IO.File.Handle
    , Polysemy.IO.Network
    , Polysemy.IO.Network.Socket
    , Polysemy.IO.Open
  other-modules:
  hs-source-dirs:     lib
  build-depends:

test-suite lib
  import:             common-options
  main-is:            Main.hs
  other-modules:
    Suite.Timeout
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  build-depends:
      polysemy-io
    -- Testing
    , tasty
    , tasty-hedgehog
    , tasty-expected-failure
    , tasty-quickcheck
    , quickcheck-instances
    , polysemy-check
    , polysemy-test